--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
+    "express": "^4.17.3",
     "mongodb": "^4.4.1",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
