--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "server": "^1.0.37",
