--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "server": "^1.0.37",
-    "slug": "^5.2.0"
+    "slug": "^5.2.0",
+    "uglify-js": "^3.15.3"
+   
   },
   "name": "back-end",
   "version": "1.0.0",
@@ -32,6 +34,10 @@
   "author": "Joost Verweijen",
   "license": "MIT",
   "devDependencies": {
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0",
+    "cssnano": "^5.1.7",
     "nodemon": "^2.0.15"
+    
   }
 }
