--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "server": "^1.0.37",
