--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
@@ -16,29 +17,28 @@
     "server": "^1.0.37",
     "slug": "^5.2.0",
     "uglify-js": "^3.15.3"
-   
   },
-  "name": "back-end",
-  "version": "1.0.0",
-  "description": "Back end van Joost",
+  "name": "match-a-pet",
+  "version": "1.1.0",
+  "description": "Blok Tech applicatie van Team 5",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "startdev": "nodemon app.js"
   },
   "keywords": [
-    "Joost",
-    "Verweijen",
+    "Match-A-Pet",
+    "Animals",
     "Tech",
-    "Matching"
+    "Matching",
+    "Dating"
   ],
-  "author": "Joost Verweijen",
+  "author": "Marijn Molenaar, Tessa Welling, Whitney Abrah & Joost Verweijen",
   "license": "MIT",
   "devDependencies": {
-    "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0",
     "cssnano": "^5.1.7",
-    "nodemon": "^2.0.15"
-    
+    "nodemon": "^2.0.15",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0"
   }
 }
