--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
+    "gulp-cssnano": "^2.1.3",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "server": "^1.0.37",
     "slug": "^5.2.0",
+    "ts-node": "^10.7.0",
     "uglify-js": "^3.15.3"
-   
   },
   "name": "back-end",
   "version": "1.0.0",
@@ -35,10 +36,14 @@
   "author": "Joost Verweijen",
   "license": "MIT",
   "devDependencies": {
-    "postcss": "^8.4.12",
-    "postcss-cli": "^9.1.0",
+    "browser-sync": "^2.27.9",
     "cssnano": "^5.1.7",
-    "nodemon": "^2.0.15"
-    
+    "gulp": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^3.0.0",
+    "gulp-useref": "^5.0.0",
+    "nodemon": "^2.0.15",
+    "postcss": "^8.4.12",
+    "postcss-cli": "^9.1.0"
   }
 }
