--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "method-override": "^3.0.0",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.9",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
+    "passport": "^0.5.2",
     "server": "^1.0.37",
     "slug": "^5.2.0",
     "uglify-js": "^3.15.3"
