--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "array-back": "^6.2.2",
     "arrayify": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "camelcase": "^6.3.0",
     "date-fns": "^2.28.0",
@@ -13,7 +14,7 @@
     "express-validator": "^6.14.0",
     "method-override": "^3.0.0",
     "mongodb": "^4.4.1",
-    "mongoose": "^6.2.9",
+    "mongoose": "^6.2.10",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
