--- a/package.json
+++ b/package.json
@@ -1,23 +1,4 @@
 {
-  "dependencies": {
-    "array-back": "^6.2.2",
-    "arrayify": "^1.0.0",
-    "body-parser": "^1.19.2",
-    "camelcase": "^6.3.0",
-    "date-fns": "^2.28.0",
-    "dotenv": "^16.0.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.3",
-    "express-session": "^1.17.2",
-    "express-validator": "^6.14.0",
-    "mongodb": "^4.4.1",
-    "mongoose": "^6.2.9",
-    "multer": "^1.4.4",
-    "nodemailer": "^6.7.3",
-    "server": "^1.0.37",
-    "slug": "^5.2.0",
-    "uglify-js": "^3.15.3"
-  },
   "name": "match-a-pet",
   "version": "1.1.0",
   "description": "Blok Tech applicatie van Team 5",
@@ -35,8 +16,37 @@
   ],
   "author": "Marijn Molenaar, Tessa Welling, Whitney Abrah & Joost Verweijen",
   "license": "MIT",
+  "dependencies": {
+    "array-back": "^6.2.2",
+    "arrayify": "^1.0.0",
+    "body-parser": "^1.19.2",
+    "camelcase": "^6.3.0",
+    "cookie-parser": "^1.4.6",
+    "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3",
+    "server": "^1.0.37",
+    "slug": "^5.2.0",
+    "uglify-js": "^3.15.3"
+  },
   "devDependencies": {
+    "browser-sync": "^2.27.9",
     "cssnano": "^5.1.7",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-cli": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-uglify-es": "^3.0.0",
+    "gulp-useref": "^5.0.0",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0"
